src/objects/c2g__codaPaymentMediaControl__c.object
<CustomObject>
    <customHelpPage>c2g__codahelppayment</customHelpPage>
    <description>Holds information for payment transmission including payment values, company, and company bank account details.</description>
    <fields>
        <fullName>c2g__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Deprecated : Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Payment Media Controls</relationshipLabel>
        <relationshipName>PaymentProposalSummaries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__AccountingCurrency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payment Currency</label>
        <referenceTo>c2g__codaAccountingCurrency__c</referenceTo>
        <relationshipName>PaymentProposalSummaries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__BankAccountNumber__c</fullName>
        <label>Originator Bank Account Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__BankCity__c</fullName>
        <label>Bank City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__BankCountry__c</fullName>
        <label>Bank Country</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__BankIbanNumber__c</fullName>
        <label>Bank IBAN Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__BankName__c</fullName>
        <label>Bank Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__BankSortCode__c</fullName>
        <label>Originator Bank Sort Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__BankStateProvince__c</fullName>
        <label>Bank State/Province</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__BankStreet__c</fullName>
        <label>Bank Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>c2g__BankSwiftNumber__c</fullName>
        <label>Bank SWIFT Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__BankZipPostalCode__c</fullName>
        <label>Bank Zip/Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__City__c</fullName>
        <label>City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__CompanyName__c</fullName>
        <label>Company Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__Country__c</fullName>
        <label>Country</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__DirectDebitOriginatorReference__c</fullName>
        <label>Direct Debit Originator Reference</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__DiscountValue__c</fullName>
        <label>Discount Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>c2g__GrossValue__c</fullName>
        <label>Gross Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__NumberofAccounts__c</fullName>
        <label>Number of Accounts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__OwnerCompany__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Company</label>
        <referenceTo>c2g__codaCompany__c</referenceTo>
        <relationshipLabel>Payment Media Controls (Company)</relationshipLabel>
        <relationshipName>PaymentMediaControls</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__PayeeName__c</fullName>
        <label>Originator Bank Account Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__PaymentControlNumber__c</fullName>
        <label>Payment Control Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__PaymentDate__c</fullName>
        <label>Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>c2g__PaymentMethod__c</fullName>
        <label>Payment Method</label>
        <picklist>
            <picklistValues>
                <fullName>Cash</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Check</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electronic</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>c2g__PaymentValue__c</fullName>
        <label>Payment Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__Payment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payment</label>
        <referenceTo>c2g__codaPayment__c</referenceTo>
        <relationshipLabel>Payment Media Controls</relationshipLabel>
        <relationshipName>PaymentMediaControls</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__StateProvince__c</fullName>
        <label>State/Province</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__Street__c</fullName>
        <label>Street</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>c2g__UnitOfWork__c</fullName>
        <label>Unit of Work</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__ZipPostCode__c</fullName>
        <label>Zip/Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Payment Media Control</label>
    <listViews>
        <fullName>FF_Fly_Now_Pay_Later_Limited_06936813_codaPaymentMediaControl</fullName>
        <filterScope>Queue</filterScope>
        <label>FF Fly Now Pay Later Limited (06936813)</label>
        <queue>FF_Fly_Now_Pay_Later_Limited_06936813</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FF_Travelfund_Limited_codaPaymentMediaControl</fullName>
        <filterScope>Queue</filterScope>
        <label>FF Travelfund Limited</label>
        <queue>FF_Travelfund_Limited</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FF_Travelfund_co_uk_Limited_codaPaymentMediaControl</fullName>
        <filterScope>Queue</filterScope>
        <label>FF Travelfund.co.uk Limited</label>
        <queue>FF_Travelfund_co_uk_Limited</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Payment Media Control Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payment Media Controls</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>